--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,11 +1,12 @@
 <h2>About Compass</h2>
 <p>Compass has been designed with something very specific in mind: to be a simple and elegant personal landing page.</p>
 
-<h2>Features</h2>
+<h2>Know more about me</h2>
 <ul>
-  <li>Responsive design</li>
-  <li>Mobile friendly</li>
-  <li>Easy deployment to <a href="https://pages.github.com/">GitHub Pages</a></li>
+  <li><a href="/blog">Blog</a></li>
+  <li><a href="/resume">Resume</a></li>
+  <li><a href="/projects">Some of my projects</a></li>
+  <li><a href="mailto:srijal.joshy@gmail.com">Contact me via email</a></li>
 </ul>
 
 <p>For more information, including setup and configuration instructions, bug reports or feature requests head over to <a href="https://github.com/excentris/compass">GitHub</a>.</p>
