--- a/assets/main.scss
+++ b/assets/main.scss
@@ -30,9 +30,9 @@ a:active {
 	text-decoration: none;
 }
 
-a:hover {
-	text-decoration: underline;
-}
+// a:hover {
+// 	text-decoration: underline;
+// }
 
 
 /*** main content list ***/
